# lagctrl-explo

./: Cargo.toml  README.md
ipc-example/: Cargo.toml
ipc-example/src/: ipc_app.rs  ipc_plugin.rs
ipc-plugin-capnp/: Cargo.toml  build.rs
ipc-plugin-capnp/src/: lib.rs  protocol.capnp
ipc-plugin-tokio/: Cargo.toml
ipc-plugin-tokio/src/: lib.rs  protocol.rs
ipc-plugin-tokio/tests/: loop_test.rs
ipc-system/: Cargo.toml
ipc-system/src/: command_registry.rs  ipc_io.rs  ipc_protocol.rs  lib.rs
ipc-tokio-example/: Cargo.toml
ipc-tokio-example/src/: ipc_tokio_app.rs  ipc_tokio_plugin.rs
plugin-system-draft/: Cargo.toml
plugin-system-draft/src/: dispatcher.rs  domain.rs  errors.rs  handlers.rs  lib.rs  plugin.rs  protocol.rs  protocol_transport.rs  transport.rs
plugin-system-draft/src/protocol/: json.rs
plugin-system-draft/src/transport/: stdio.rs
