[package]
name = "ipc-plugin-capnp"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[build-dependencies]
capnpc = "0.21"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
capnp = "0.21"
capnp-futures = "0.21"
anyhow = "1.0"
chrono = "0.4"
