[package]
name = "ipc-plugin-tokio"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "ipc-plugin-tokio-app"
path = "src/bin/app.rs"

[[bin]]
name = "ipc-plugin-tokio-plugin"
path = "src/bin/plugin.rs"